@@ -102,6 +102,8 @@ function ViewTalkPage2()
 				'topic' => $topicOptions['id'],
 			)
 		);
+
+		cache_put_data('wiki-pageinfo-' . $context['namespace']['id'] . '-' . $_REQUEST['page'], null, 360);
 	}
 
 	redirectexit(wiki_get_url(array('page' => $context['page_info']['name'], 'sa' => 'talk')));
