@@ -7,6 +7,8 @@ February 2009
 --------------------------------------------------------------------------------
  ! Wikiparser lost some raw sections
  ! Wikiparser lost values for numeric parameters
+ + Make links to non-existing pages red
+ ! Cache wasn't cleared after talk topic was created
 
 January 2009
 --------------------------------------------------------------------------------
